Code cleanup for jndi module: * General generification * Add braces around if/else statements * Remove unused code * Fix spelling errors * Remove unnecessary javadoc * Add annotations for Override * Eliminate compiler warnings
git-svn-id: https://svn.apache.org/repos/asf/incubator/harmony/enhanced/classlib/trunk@449489 13f79535-47bb-0310-9956-ffa450edef68